# apps/api/wwwroot/TalkToCeo-api-spec.json
@@ -341,6 +341,53 @@
                 }
             }
         },
+        "/messages/{id}/sent": {
+            "put": {
+                "summary": "Send message status update",
+                "operationId": "sendStatusMessageAsync",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/client_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/client_secret"
+                    },
+                    {
+                        "$ref": "#/components/parameters/messageId"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The message has been successfully updated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/SuccessResponse"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Invalid request parameters",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/InvalidRequestResponse"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Message not found"
+                    }
+                }
+            }
+        },
         "/messages/{id}/reply": {
             "put": {
                 "summary": "Reply message (CEO only)",
@@ -478,7 +525,7 @@
                     }
                 ],
                 "requestBody": {
-                    "required": true, 
+                    "required": true,
                     "content": {
                         "multipart/form-data": {
                             "schema": {
@@ -548,7 +595,7 @@
                     {
                         "$ref": "#/components/parameters/client_secret"
                     },
-                  {
+                    {
                         "name": "messageId",
                         "in": "path",
                         "required": true,
